--- a/bt/index.html
+++ b/bt/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+</head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -115,10 +116,136 @@
                     <td>
                         <div class="btn-group">
                             <button class="btn btn-info">
-                                info
+                                <i class="fa fa-edit"></i>
                             </button>
                             <button class="btn btn-danger">
-                                delete
+                                <i class="fa fa-trash"></i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>JOE</td>
+                    <td>joe@joe.hu</td>
+                    <td>Kecskemét</td>
+                    <td>Male</td>
+                    <td>46</td>
+                    <td>
+                        <div class="btn-group">
+                            <button class="btn btn-info">
+                                <i class="fa fa-edit"></i>
+                            </button>
+                            <button class="btn btn-danger">
+                                <i class="fa fa-trash"></i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>JOE</td>
+                    <td>joe@joe.hu</td>
+                    <td>Kecskemét</td>
+                    <td>Male</td>
+                    <td>46</td>
+                    <td>
+                        <div class="btn-group">
+                            <button class="btn btn-info">
+                                <i class="fa fa-edit"></i>
+                            </button>
+                            <button class="btn btn-danger">
+                                <i class="fa fa-trash"></i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>JOE</td>
+                    <td>joe@joe.hu</td>
+                    <td>Kecskemét</td>
+                    <td>Male</td>
+                    <td>46</td>
+                    <td>
+                        <div class="btn-group">
+                            <button class="btn btn-info">
+                                <i class="fa fa-edit"></i>
+                            </button>
+                            <button class="btn btn-danger">
+                                <i class="fa fa-trash"></i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>JOE</td>
+                    <td>joe@joe.hu</td>
+                    <td>Kecskemét</td>
+                    <td>Male</td>
+                    <td>46</td>
+                    <td>
+                        <div class="btn-group">
+                            <button class="btn btn-info">
+                                <i class="fa fa-edit"></i>
+                            </button>
+                            <button class="btn btn-danger">
+                                <i class="fa fa-trash"></i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>JOE</td>
+                    <td>joe@joe.hu</td>
+                    <td>Kecskemét</td>
+                    <td>Male</td>
+                    <td>46</td>
+                    <td>
+                        <div class="btn-group">
+                            <button class="btn btn-info">
+                                <i class="fa fa-edit"></i>
+                            </button>
+                            <button class="btn btn-danger">
+                                <i class="fa fa-trash"></i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>JOE</td>
+                    <td>joe@joe.hu</td>
+                    <td>Kecskemét</td>
+                    <td>Male</td>
+                    <td>46</td>
+                    <td>
+                        <div class="btn-group">
+                            <button class="btn btn-info">
+                                <i class="fa fa-edit"></i>
+                            </button>
+                            <button class="btn btn-danger">
+                                <i class="fa fa-trash"></i>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>JOE</td>
+                    <td>joe@joe.hu</td>
+                    <td>Kecskemét</td>
+                    <td>Male</td>
+                    <td>46</td>
+                    <td>
+                        <div class="btn-group">
+                            <button class="btn btn-info">
+                                <i class="fa fa-edit"></i>
+                            </button>
+                            <button class="btn btn-danger">
+                                <i class="fa fa-trash"></i>
                             </button>
                         </div>
                     </td>
